--- a/src/scss/components/_segments.scss
+++ b/src/scss/components/_segments.scss
@@ -222,7 +222,7 @@
         flex-wrap: nowrap;
         color: var(--secondary-text-colour);
         background-color: transparent;
-        padding: 0 5px 24px;
+        padding: 5px 5px 24px;
         margin: 0;
         border: 0;
         min-height: 44px;
